src/include/taurus.h

typedef struct taurus_node*            TaurusNodeRef;
typedef struct taurus_document*        TaurusDocument;
typedef struct taurus_element*         TaurusElement;
typedef struct taurus_xpath_result*    TaurusXPathResult;
/* ============================================================================
 * Status Codes
 * ============================================================================ */

typedef enum {
    TAURUS_OK = 0,
    TAURUS_ERROR_MEMORY = -1,      /* Memory allocation failed */
    TAURUS_ERROR_PARSE = -2,       /* XML parsing error */
    TAURUS_ERROR_XPATH = -3,       /* XPath evaluation error */
    TAURUS_ERROR_NULL_ARG = -4,    /* NULL argument passed */
    TAURUS_ERROR_INVALID_ARG = -5, /* Invalid argument */
    TAURUS_ERROR_NOT_FOUND = -6,   /* Resource not found */
    TAURUS_ERROR_IO = -7           /* I/O error (file not found, etc.) */
} TaurusStatus;
/* ============================================================================
 * XPath Result Types
 * ============================================================================ */

typedef enum {
    TAURUS_XPATH_NODESET,
    TAURUS_XPATH_BOOLEAN,
    TAURUS_XPATH_NUMBER,
    TAURUS_XPATH_STRING
} TaurusXPathResultType;
/* ============================================================================
 * Node Operations
 * ============================================================================ */

/**
 * Get node type
 *
 * @param node Node handle
 * @return Node type code (0=Element, 1=Text, 2=Comment, 3=CDATA, 4=PI, 5=DOCTYPE, 6=Attribute)
 */
TAURUS_API int taurus_node_get_type(TaurusNodeRef node);
/**
 * Get first child node (any type)
 *
 * @param node Parent node
 * @return First child node (element, text, comment, CDATA, or PI), or NULL if no children
 *
 * Memory: Node is owned by document. Do not free.
 */
TAURUS_API TaurusNodeRef taurus_node_first_child(TaurusNodeRef node);
/**
 * Get next sibling node (any type)
 *
 * @param node Current node
 * @return Next sibling node, or NULL if node is last child
 *
 * Memory: Node is owned by document. Do not free.
 */
TAURUS_API TaurusNodeRef taurus_node_next_sibling(TaurusNodeRef node);
/**
 * Get previous sibling node (any type)
 *
 * @param node Current node
 * @return Previous sibling node, or NULL if node is first child
 *
 * Memory: Node is owned by document. Do not free.
 */
TAURUS_API TaurusNodeRef taurus_node_previous_sibling(TaurusNodeRef node);
/**
 * Get child count (all node types)
 *
 * @param node Parent node
 * @return Number of child nodes
 */
TAURUS_API size_t taurus_node_child_count(TaurusNodeRef node);
/**
 * Cast node to element (if node is an element)
 *
 * @param node Node handle
 * @return Element handle, or NULL if node is not an element
 *
 * Memory: Element is owned by document. Do not free.
 */
TAURUS_API TaurusElement taurus_node_as_element(TaurusNodeRef node);
/**
 * Cast element to its base node handle (for traversal with the
 * taurus_node_* family of operations).
 *
 * Every element IS-A node (the element struct begins with a TaurusNode
 * header), so this cast is always safe.  The reverse direction is
 * taurus_node_as_element(), which returns NULL for non-element nodes.
 *
 * @param elem Element handle
 * @return Node handle, or NULL if elem is NULL
 */
TAURUS_API TaurusNodeRef taurus_element_as_node(TaurusElement elem);
/**
 * Get text content from text node
 *
 * @param node Node handle (must be TAURUS_NODE_TYPE_TEXT or TAURUS_NODE_TYPE_CDATA)
 * @return Text content, or NULL if node is not a text/CDATA node
 *
 * Memory: String is owned by node. Do not free or modify.
 */
TAURUS_API const char* taurus_text_node_get_content(TaurusNodeRef node);
/**
 * Get comment content
 *
 * @param node Node handle (must be TAURUS_NODE_TYPE_COMMENT)
 * @return Comment content, or NULL if node is not a comment
 *
 * Memory: String is owned by node. Do not free or modify.
 */
TAURUS_API const char* taurus_comment_node_get_content(TaurusNodeRef node);
/**
 * Get CDATA content
 *
 * @param node Node handle (must be TAURUS_NODE_TYPE_CDATA)
 * @return CDATA content, or NULL if node is not a CDATA node
 *
 * Memory: String is owned by node. Do not free or modify.
 */
TAURUS_API const char* taurus_cdata_node_get_content(TaurusNodeRef node);
/**
 * Get processing instruction target
 *
 * @param node Node handle (must be TAURUS_NODE_TYPE_PI)
 * @return PI target, or NULL if node is not a PI
 *
 * Memory: String is owned by node. Do not free or modify.
 */
TAURUS_API const char* taurus_pi_node_get_target(TaurusNodeRef node);
/**
 * Get processing instruction data
 *
 * @param node Node handle (must be TAURUS_NODE_TYPE_PI)
 * @return PI data, or NULL if node is not a PI or has no data
 *
 * Memory: String is owned by node. Do not free or modify.
 */
TAURUS_API const char* taurus_pi_node_get_data(TaurusNodeRef node);
/* ============================================================================
 * Document Operations
 * ============================================================================ */

/**
 * Parse XML string into document
 *
 * @param xml XML string (must be valid UTF-8)
 * @param length Length of XML string in bytes
 * @param status Output status code (can be NULL)
 * @return Document handle or NULL on error
 *
 * Memory: Caller must call taurus_document_free() when done
 * Thread safety: Not thread-safe. One document per thread.
 */
TAURUS_API TaurusDocument taurus_parse_string(const char* xml, size_t length, TaurusStatus* status);
/**
 * Free document and all its elements
 *
 * @param doc Document to free (can be NULL)
 */
TAURUS_API void taurus_document_free(TaurusDocument doc);
/**
 * Get root element of document
 *
 * @param doc Document
 * @return Root element or NULL if document is NULL or empty
 *
 * Memory: Element is owned by document. Do not free separately.
 */
TAURUS_API TaurusElement taurus_document_root(TaurusDocument doc);
/* ============================================================================
 * Element Operations
 * ============================================================================ */

/**
 * Get element name
 *
 * @param elem Element
 * @return Element name or NULL if elem is NULL
 *
 * Memory: String is owned by element. Do not free or modify.
 */
TAURUS_API const char* taurus_element_name(TaurusElement elem);
/**
 * Get element text content (concatenation of all text nodes)
 *
 * @param elem Element
 * @return Text content or NULL if elem is NULL or has no text
 *
 * Memory: String is owned by element. Do not free or modify.
 */
TAURUS_API const char* taurus_element_text(TaurusElement elem);
/**
 * Get attribute value by name
 *
 * @param elem Element
 * @param name Attribute name
 * @return Attribute value or NULL if not found
 *
 * Memory: String is owned by element. Do not free or modify.
 */
TAURUS_API const char* taurus_element_attribute(TaurusElement elem, const char* name);
/**
 * Get parent element
 *
 * @param elem Element
 * @return Parent element or NULL if elem is root or NULL
 *
 * Memory: Element is owned by document. Do not free separately.
 */
TAURUS_API TaurusElement taurus_element_parent(TaurusElement elem);
/**
 * Get first child element regardless of name
 *
 * @param elem Element to search in
 * @return First child element or NULL if elem has no children
 *
 * Convenience function that returns the first child element
 * regardless of its name. Same as taurus_element_first_child(elem, NULL).
 *
 * Memory: Element is owned by document. Do not free separately.
 */
TAURUS_API TaurusElement taurus_element_first_child_any(TaurusElement elem);
/**
 * Get next sibling element regardless of name
 *
 * @param elem Element to start from
 * @return Next sibling element or NULL if elem is last child
 *
 * Convenience function that returns the next sibling element
 * regardless of its name. Same as taurus_element_next_sibling(elem, NULL).
 *
 * Memory: Element is owned by document. Do not free separately.
 */
TAURUS_API TaurusElement taurus_element_next_sibling_any(TaurusElement elem);
/* ============================================================================
 * XPath Operations
 * ============================================================================ */

/**
 * Evaluate XPath expression
 *
 * @param doc Document (required)
 * @param context Context element (NULL = document root)
 * @param expression XPath expression string
 * @return XPath result or NULL on error
 *
 * Memory: Caller must call taurus_xpath_result_free() when done
 * Thread safety: Not thread-safe. One evaluation per thread.
 *
 * XPath 1.0 compliance: Full XPath 1.0 specification
 * - All 13 axes: child, descendant, parent, ancestor, sibling, etc.
 * - All 27 functions: string(), count(), position(), etc.
 * - All operators: =, !=, <, <=, >, >=, +, -, *, div, mod, |, and, or
 * - Predicates: [1], [@attr], [position() > 2], etc.
 */
TAURUS_API TaurusXPathResult taurus_xpath_eval(
    TaurusDocument doc,
    TaurusElement context,
    const char* expression
);
/**
 * Get XPath result type
 *
 * @param result XPath result
 * @return Result type or -1 if result is NULL
 */
TAURUS_API TaurusXPathResultType taurus_xpath_result_type(TaurusXPathResult result);
/**
 * Get nodeset size (for NODESET results)
 *
 * @param result XPath result
 * @return Number of nodes or 0 if not a nodeset or result is NULL
 */
TAURUS_API size_t taurus_xpath_result_count(TaurusXPathResult result);
/**
 * Get node from nodeset by index
 *
 * @param result XPath result
 * @param index Node index (0-based)
 * @return Element or NULL if index out of bounds or not a nodeset
 *
 * Memory: Element is owned by document. Do not free separately.
 */
TAURUS_API TaurusElement taurus_xpath_result_get(TaurusXPathResult result, size_t index);
/**
 * Get boolean value (for BOOLEAN results or type conversion)
 *
 * @param result XPath result
 * @return Boolean value (1 = true, 0 = false)
 *
 * Type conversion rules:
 * - BOOLEAN: Direct value
 * - NUMBER: true if non-zero and not NaN
 * - STRING: true if non-empty
 * - NODESET: true if non-empty
 */
TAURUS_API int taurus_xpath_result_boolean(TaurusXPathResult result);
/**
 * Get number value (for NUMBER results or type conversion)
 *
 * @param result XPath result
 * @return Number value (NaN if conversion fails)
 *
 * Type conversion rules:
 * - NUMBER: Direct value
 * - BOOLEAN: 1.0 or 0.0
 * - STRING: Parsed as number (NaN if invalid)
 * - NODESET: First node's string value converted to number
 */
TAURUS_API double taurus_xpath_result_number(TaurusXPathResult result);
/**
 * Get string value (for STRING results or type conversion)
 *
 * @param result XPath result
 * @return String value or NULL if result is NULL
 *
 * Memory: Caller must call taurus_free_string() when done
 *
 * Type conversion rules:
 * - STRING: Direct value
 * - BOOLEAN: "true" or "false"
 * - NUMBER: String representation of number
 * - NODESET: String value of first node (recursive text concatenation)
 */
TAURUS_API char* taurus_xpath_result_string(TaurusXPathResult result);
/**
 * Free XPath result
 *
 * @param result Result to free (can be NULL)
 */
TAURUS_API void taurus_xpath_result_free(TaurusXPathResult result);
/* ============================================================================
 * Memory Management Helpers
 * ============================================================================ */

/**
 * Free string returned by libtaurus
 *
 * @param str String to free (can be NULL)
 *
 * Use this to free strings returned by:
 * - taurus_xpath_result_string()
 */
TAURUS_API void taurus_free_string(char* str);
/* ============================================================================
 * XInclude 1.0 Support
 * ============================================================================ */

/**
 * Process XInclude elements in document
 *
 * Replaces all <xi:include> elements with their included content.
 * Follows W3C XInclude 1.0 specification (https://www.w3.org/TR/xinclude/).
 *
 * @param doc Document to process
 * @param base_url Base URL for resolving relative hrefs (can be NULL)
 * @return TAURUS_OK on success, error code on failure
 *
 * XInclude namespace: http://www.w3.org/2001/XInclude
 *
 * Example:
 *   <root xmlns:xi="http://www.w3.org/2001/XInclude">
 *     <xi:include href="chapter1.xml"/>
 *   </root>
 */
TAURUS_API TaurusStatus taurus_xinclude_process(TaurusDocument doc, const char* base_url);